# MCP-Servers

mcp-crash-course-project-langchain-mcp-adapters/: README.md  main.py  pyproject.toml
mcp-crash-course-project-langchain-mcp-adapters/servers/: math_server.py
mcp-crash-course-project-resources/: main.py
shell-server/: server.py
shell-server/shellserver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
