[project]
name = "mcp-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "isort>=6.0.1",
    "langchain>=1.0.7",
    "langchain-groq>=1.0.1",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=0.3.12",
    "langgraph>=1.0.3",
    "python-dotenv>=1.1.0",
]
